# bootcamp-optimism

./: .gitmodules  LICENSE  Quiz.md  README.md
week1/: README.md
week1/day1/: README.md  main.py  poa.html  pos.html  pow.html  pyproject.toml
week1/day2/: README.md  index.js  package-lock.json  package.json  pagina1.html
week1/day2/public/: index.html
week1/day3/: README.md
week1/day4/: README.md
week1/day5/: README.md
week1/day5/script/: Flipper.s.sol
week1/day5/src/: Flipper.sol
week1/day5/test/: Flipper.t.sol
week1/quiz/: README.md
week2/: README.md
week2/day1/script/: Counter.s.sol
week2/day1/src/: Counter.sol
week2/day1/test/: Counter.t.sol
week2/day2/script/: Token.s.sol
week2/day2/src/: Token.sol
week2/day3/src/: Counter.sol
week2/day4/: Makefile  README.md
week2/day4/src/: Attack.sol  Counter.sol  Encode.sol  EtherStoreSafe.sol  EtherStoreVuln.sol  King.sol  KingAttack.sol  VulnSlither.sol
week2/day4/test/: Counter.t.sol  KingTest.t.sol  Reentracy.t.sol
week2/day5/: README.md  airdrop.sh  deploy.sh  remappings.txt  walltes.json
week2/day5/broadcast/Deploy.projects.s.sol/10/: run-1709949463.json  run-1709950285.json  run-latest.json
week2/day5/broadcast/Deploy.projects.s.sol/11155420/: run-1709943788.json  run-1709943795.json  run-1709944032.json  run-1709944039.json  (+7 more)
week2/day5/nft/: 0.json
week2/day5/script/: Deploy.projects.s.sol  airdrop.s.sol
week2/day5/src/: Projects.sol  SolToken.sol
week2/quiz/: README.md
week3/day1/: README.md
week3/day2/: README.md
week3/day3/: README.md
week3/day5/: README.md
(+8 files in other folders)
