[tool.poetry]
name = "day1"
version = "0.1.0"
description = ""
authors = ["Lucas Oliveira <olivmath@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
keccaky = "^0.3.1"
web3 = "^6.15.1"
merkly = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
